--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.example.vadym.testsuperdeal.activities.MainActivity">
 
     <data>
@@ -8,6 +9,9 @@
         <variable
             name="error"
             type="com.example.vadym.testsuperdeal.util.GitHubError"/>
+        <variable
+            name="viewModel"
+            type="com.example.vadym.testsuperdeal.mvvm.GitHubViewModel"/>
     </data>
 
     <RelativeLayout
@@ -42,7 +46,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/editText"
-            android:layout_marginTop="5dp" />
+            android:layout_marginTop="5dp"
+            app:items="@{viewModel.adapter}"
+            app:manager="@{viewModel.manager}"/>
 
         <android.support.v7.widget.CardView
             android:id="@+id/errorCardView"
